--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "axios": "^1.7.9",
     "cohere-ai": "^7.15.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
