--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,7 +1,8 @@
 {
     "manifest_version": 3,
-    "version": "1.0.2",
+    "version": "1.0.3",
     "name": "LeetBuddy",
+    "description": "AI tools for LeetCode: hints, chat, whiteboard & more.",
     "action": {
       "default_icon": "favicon-Photoroom.png",
       "default_popup": "index.html"
