--- a/frontend/manifest.template.json
+++ b/frontend/manifest.template.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
-  "version": "1.0.4",
-  "name": "LeetBuddy",
+  "version": "1.1.0",
+  "name": "LeetBuddy - Your AI-Powered LeetCode Assistant",
   "description": "AI tools for LeetCode: Hints, Chat, Whiteboard & more!",
   "action": {
     "default_icon": "favicon-Photoroom.png",
