--- a/package.json
+++ b/package.json
@@ -10,14 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "lucide-react": "^0.511.0",
     "prism-react-renderer": "^2.4.1",
     "prismjs": "^1.30.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.4.0",
     "react-markdown": "^10.1.0",
-    "react-router-dom": "^7.6.2",
     "remark-gfm": "^4.0.0",
     "tldraw": "^3.13.1",
     "uuid": "^11.0.5"
@@ -27,7 +25,6 @@
     "@tailwindcss/vite": "^4.1.8",
     "@types/node": "^22.15.30",
     "@types/react": "^19.1.6",
-    "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.5.1",
     "eslint": "^9.28.0",
     "eslint-plugin-react": "^7.37.5",
@@ -35,7 +32,6 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.2.0",
     "tailwindcss": "^4.1.8",
-    "vite": "^6.3.5",
-    "vite-plugin-svgr": "^4.3.0"
+    "vite": "^6.3.5"
   }
 }
